--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "diretto"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "Apache-2.0"
+authors = ["Federico Maria Morrone <contact@morrone.dev>"]
+description = "drm"
+readme = "README.md"
+documentation = "https://docs.rs/diretto"
+repository = "https://github.com/verdiwm/diretto"
+include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [dependencies]
