--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,13 @@ documentation = "https://docs.rs/diretto"
 repository = "https://github.com/verdiwm/diretto"
 include = ["src/**/*.rs", "README.md", "LICENSE"]
 
+[dev-dependencies]
+anyhow = "1.0.86"
+colorous = "1.0.14"
+drm = "0.12.0"
+raw-window-handle = "0.6.2"
+rustix = { version = "0.38.34", default-features = false, features = ["event"] }
+softbuffer = { version = "0.4.5", default-features = false, features = ["kms"] }
+
 [dependencies]
+rustix = { version = "0.38.34", default-features = false }
