--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ drm = "0.12.0"
 rustix = { version = "0.38.34", default-features = false, features = ["event"] }
 softbuffer = { version = "0.4.5", default-features = false, features = ["kms"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
+wgpu = { version = "0.20.1", default-features = false, features = ["wgsl"] }
+winit = { version = "0.30.3", default-features = false, features = ["rwh_06", "wayland"] }
+tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
+
 
 [dependencies]
 rustix = { version = "0.38.34", default-features = false }
