--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,26 @@ colorous = "1.0.14"
 drm = "0.12.0"
 rustix = { version = "0.38.34", default-features = false, features = ["event"] }
 softbuffer = { version = "0.4.5", default-features = false, features = ["kms"] }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
+tracing-subscriber = { version = "0.3.18", features = [
+    "env-filter",
+    "tracing-log",
+] }
 wgpu = { version = "0.20.1", default-features = false, features = ["wgsl"] }
-winit = { version = "0.30.3", default-features = false, features = ["rwh_06", "wayland"] }
+winit = { version = "0.30.3", default-features = false, features = [
+    "rwh_06",
+    "wayland",
+] }
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 drm-fourcc = "2.2.0"
+raw-window-handle = "0.6.2"
 
 [dependencies]
 rustix = { version = "0.38.34", default-features = false, features = ["mm"] }
-raw-window-handle = "0.6.2"
 tracing = "0.1.40"
-linux-raw-sys = { git = "https://github.com/morr0ne/linux-raw-sys.git", branch = "drm", version = "0.6.4", features = ["drm"] }
+linux-raw-sys = { git = "https://github.com/morr0ne/linux-raw-sys.git", branch = "drm", version = "0.6.4", features = [
+    "drm",
+] }
+
+[patch.crates-io]
+wgpu = { git = "https://github.com/morr0ne/wgpu", branch = "drm-support" }
+raw-window-handle = { git = "https://github.com/morr0ne/raw-window-handle", branch = "drm-connector" }
