Update manifest description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.3"
 edition = "2021"
 license = "Apache-2.0"
 authors = ["Federico Maria Morrone <contact@morrone.dev>"]
-description = "drm"
+description = "Simple library to interact with the drm interface"
 readme = "README.md"
 documentation = "https://docs.rs/diretto"
 repository = "https://github.com/verdiwm/diretto"
