--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [dependencies]
 drm-sys = "0.8.0"
-rustix = { version = "0.38.42", default-features = false, features = ["mm"] }
+rustix = { version = "0.38.43", default-features = false, features = ["mm"] }
 tracing = "0.1.41"
 
 [dev-dependencies]
@@ -26,14 +26,14 @@ tracing-subscriber = { version = "0.3.19", features = [
     "env-filter",
     "tracing-log",
 ] }
-wgpu = { version = "23.0.1", default-features = false, features = ["wgsl"] }
-tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
+wgpu = { version = "24.0.0", default-features = false, features = ["wgsl"] }
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 raw-window-handle = "0.6.2"
-bytemuck = { version = "1.20.0", features = ["derive"] }
+bytemuck = { version = "1.21.0", features = ["derive"] }
 image = "0.25.5"
 rand = "0.8.5"
 
 [patch.crates-io]
-wgpu = { git = "https://github.com/morr0ne/wgpu", branch = "drm-support" }
+wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
 # wgpu = { path = "../wgpu/wgpu" }
-raw-window-handle = { git = "https://github.com/morr0ne/raw-window-handle", branch = "drm-connector" }
+raw-window-handle = { git = "https://github.com/verdiwm/raw-window-handle", branch = "drm-connector" }
