--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,16 @@ documentation = "https://docs.rs/diretto"
 repository = "https://github.com/verdiwm/diretto"
 include = ["src/**/*.rs", "README.md", "LICENSE"]
 
+[features]
+tracing = ["dep:tracing"]
+
 [dependencies]
 drm-sys = "0.8.0"
 rustix = { version = "0.38.44", default-features = false, features = [
     "mm",
     "std",
 ] }
-tracing = "0.1.41"
+tracing = { version = "0.1.41", optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.95"
@@ -35,6 +38,10 @@ raw-window-handle = "0.6.2"
 bytemuck = { version = "1.21.0", features = ["derive"] }
 image = "0.25.5"
 rand = "0.9.0"
+
+[[example]]
+name = "wgpu"
+required-features = ["tracing"]
 
 [patch.crates-io]
 wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
