--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ raw-window-handle = "0.6.2"
 bytemuck = { version = "1.21.0", features = ["derive"] }
 image = "0.25.5"
 rand = "0.9.0"
+glutin = { version = "0.32.2", default-features = false, features = ["egl"] }
 
 [[example]]
 name = "wgpu"
