--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,6 @@ required-features = ["tracing"]
 wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
 # wgpu = { path = "../wgpu/wgpu" }
 raw-window-handle = { git = "https://github.com/verdiwm/raw-window-handle", branch = "drm-connector" }
+
+[build-dependencies]
+pkg-config = "0.3.31"
