--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,19 @@ repository = "https://github.com/verdiwm/diretto"
 include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [features]
+drm = ["dep:rustix"]
+gbm = ["dep:pkg-config"]
 tracing = ["dep:tracing"]
 
 [dependencies]
-rustix = { version = "0.38.44", default-features = false, features = [
+rustix = { version = "0.38.44", optional = true, default-features = false, features = [
     "mm",
     "std",
 ] }
 tracing = { version = "0.1.41", optional = true }
+
+[build-dependencies]
+pkg-config = { version = "0.3.31", optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.95"
@@ -44,12 +49,9 @@ glutin = { version = "0.32.2", default-features = false, features = ["egl"] }
 
 [[example]]
 name = "wgpu"
-required-features = ["tracing"]
+required-features = ["drm", "tracing"]
 
 [patch.crates-io]
 wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
 # wgpu = { path = "../wgpu/wgpu" }
 raw-window-handle = { git = "https://github.com/verdiwm/raw-window-handle", branch = "drm-connector" }
-
-[build-dependencies]
-pkg-config = "0.3.31"
