--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,10 @@ glutin = { version = "0.32.2", default-features = false, features = ["egl"] }
 name = "wgpu"
 required-features = ["drm", "tracing"]
 
+[[example]]
+name = "egl"
+required-features = ["drm", "gbm", "tracing"]
+
 [patch.crates-io]
 wgpu = { git = "https://github.com/verdiwm/wgpu", branch = "drm-support" }
 # wgpu = { path = "../wgpu/wgpu" }
