Replace deadname with my actual name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ name = "diretto"
 version = "0.0.5"
 edition = "2024"
 license = "Apache-2.0"
-authors = ["Federico Maria Morrone <contact@morrone.dev>"]
+authors = ["Matilde Morrone <contact@morrone.dev>"]
 description = "Simple library to interact with the drm interface"
 readme = "README.md"
 documentation = "https://docs.rs/diretto"
